<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="action_search">Search!!!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="start_service">Start service</string>
    <string name="end_service">End service</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>
    <string name="landscape_message">This is Landscape mode fragment</string>
    <string name="portrait_message">This is Portrait mode fragment</string>

    <string name="start_note">Start Notification</string>
    <string name="cancel_note">Cancel Notification</string>
    <string name="update_note">Update Notification</string>
    <string name="title_activity_intent_test">IntentTest</string>
    <string name="title_activity_intent_test2">IntentTest2</string>
    <string name="title_activity_custom_view">CustomView</string>

    <string name="start_browser_a">Start Browser with VIEW action</string>
    <string name="start_browser_b">Start Browser with LAUNCH action</string>
    <string name="start_browser_c">Exception Condition</string>
    <string name="title_activity_linear_layout_test">LinearLayoutTest</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>

    <string name="reminder">Enter your name</string>
    <string name="done">Done</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="title_activity_frame_layout_test">FrameLayoutTest</string>
</resources>