<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" android:weightSum="1">

    <Button android:id="@+id/start_browser_a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_browser_a"/>
    <Button android:id="@+id/start_browser_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_browser_b"/>

    <Button android:id="@+id/start_browser_c"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_browser_c"/>


</LinearLayout>
