<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/button"
              android:layout_toStartOf="@+id/button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_alignParentTop="true" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" android:id="@+id/button" android:onClick="sendMessage"  />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:id="@+id/button2"
            android:onClick="startService"
            android:layout_below="@+id/edit_message" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_service"
            android:id="@+id/button4"
            android:onClick="stopService"
            android:layout_below="@+id/button2" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/serviceStatus" android:layout_alignBottom="@+id/button4" android:layout_toRightOf="@+id/button2"
            android:layout_below="@+id/button" android:layout_alignRight="@+id/button"
            android:layout_alignEnd="@+id/button" android:textAlignment="center" android:text="status"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@+id/serviceStatus"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Name" />
        <EditText
                android:id="@+id/txtName"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Grade" />
        <EditText
                android:id="@+id/txtGrade"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />
        <Button
                android:text="Add Name"
                android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickAddName" />
        <Button
                android:text="Retrieve Students"
                android:id="@+id/btnRetrieve"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRetrieveStudents" />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="add not."
                android:id="@+id/button5" android:onClick="showNotification"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="update not."
                android:id="@+id/button6" android:onClick="updateNotification"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cancel not."
                android:id="@+id/button7" android:onClick="cancelNotification"/>
    </LinearLayout>

</RelativeLayout>
